# kit-ferret-rs

./: .gitignore  Cargo.toml  license  readme.md
assets/: box.raw
demo-desktop/: Cargo.toml
demo-desktop/src/: main.rs  sdl2_interface.rs
demo-kitferret/: Cargo.toml
demo-kitferret/.cargo/: config.toml
demo-kitferret/src/: controller.rs  main.rs  spi_controller.rs  st7735.rs  timer.rs
demo-kitferret/src/input/: input_state.rs
demo-kitferret/src/st7735/: instruction.rs
ferret-graphics/: Cargo.toml
ferret-graphics/src/: color.rs  ferret_3d.rs  fonts.rs  lib.rs  rect.rs  screen_trait.rs
ferret-graphics/src/ferret_3d/: edge_data.rs  edge_equation.rs  parameter_equation.rs  pixel_data.rs  pixel_shader_trait.rs  triangle_edge_test.rs  triangle_equations.rs  vertex_shader_trait.rs
ferret-graphics/src/fonts/: glcd.rs
ferret-utils/: Cargo.toml
ferret-utils/src/: convert.rs  lib.rs
ferret-utils/src/convert/: floats.rs  integers.rs
src/: lib.rs  system.rs
src/system/: system_traits.rs
